[package]
name = "agora-rtsa-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libc = "0.2.132"
num-traits = "0.2"
num-derive = "0.3"
num_enum = "0.5.7"
log = "0.4"
lazy_static = "1.4"

[build-dependencies]
bindgen = "0.60.1"